support switching chains with yarn use chain

--- a/packages/eris-chain-adapter/Cargo.toml
+++ b/packages/eris-chain-adapter/Cargo.toml
@@ -18,7 +18,7 @@ eris-kujira = { path = "../eris-kujira" }
 eris-whitewhale = { path = "../eris-whitewhale" }
 
 [features]
-whitewhale = []
-kujira = []
+X-whitewhale-X = []
+X-kujira-X = []
 
-default = ["kujira"]
+default = ["X-kujira-X"]
