--- a/packages/eris-kujira-test/Cargo.toml
+++ b/packages/eris-kujira-test/Cargo.toml
@@ -13,6 +13,9 @@ crate-type = ["cdylib", "rlib"]
 
 [features]
 backtraces = ["cosmwasm-std/backtraces"]
+X-whitewhale-X = []
+X-kujira-X = []
+default = ["X-kujira-X"]
 
 [dependencies]
 cosmwasm-std =  { version = "1.1.3", features = ["stargate"] }
