--- a/packages/eris-whitewhale/Cargo.toml
+++ b/packages/eris-whitewhale/Cargo.toml
@@ -14,4 +14,13 @@ cosmwasm-schema = "1.1.3"
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 eris-chain-shared = { path = "../eris-chain-shared"}
+osmosis-std-derive = "0.13.2"
+cw20 = { version = "0.13.2" }
+prost = {version = "0.11.0", default-features = false, features = ["prost-derive"]}
+prost-types = {version = "0.11.1", default-features = false}
+cw-asset = "3.0.0"
+# terraswap = { git = "https://github.com/White-Whale-Defi-Platform/white-whale-core.git", default-features = false, rev = "0950abebcec5c67a0ff2d83ce730abdef8f84369" }
+
+# [dev-dependencies]
+# serde_json = "1.0.93"
 
