--- a/packages/eris-chain-adapter/Cargo.toml
+++ b/packages/eris-chain-adapter/Cargo.toml
@@ -21,4 +21,4 @@ eris-whitewhale = { path = "../eris-whitewhale" }
 X-whitewhale-X = []
 X-kujira-X = []
 
-default = ["X-whitewhale-X"]
+default = ["X-kujira-X"]
