--- a/packages/eris-kujira-test/Cargo.toml
+++ b/packages/eris-kujira-test/Cargo.toml
@@ -15,7 +15,7 @@ crate-type = ["cdylib", "rlib"]
 backtraces = ["cosmwasm-std/backtraces"]
 X-whitewhale-X = []
 X-kujira-X = []
-default = ["X-whitewhale-X"]
+default = ["X-kujira-X"]
 
 [dependencies]
 cosmwasm-std =  { version = "1.1.3", features = ["stargate"] }
