--- a/packages/eris-injective/Cargo.toml
+++ b/packages/eris-injective/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "eris-kujira-test"
+name = "eris-injective"
 version = "1.2.2"
 authors = ["devs <devs@erisprotocol.com>"]
 edition = "2018"
@@ -8,28 +8,19 @@ license = "GPL-3.0-or-later"
 homepage = "https://www.erisprotocol.com"
 repository = "https://github.com/erisprotocol/contracts-kujira"
 
-[lib]
-crate-type = ["cdylib", "rlib"]
-
-[features]
-backtraces = ["cosmwasm-std/backtraces"]
-X-whitewhale-X = []
-X-kujira-X = []
-X-injective-X = []
-default = ["X-kujira-X"]
-
 [dependencies]
 cosmwasm-std =  { version = "1.1.3", features = ["stargate"] }
 cosmwasm-schema = "1.1.3"
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
-kujira = "0.7.13"
-eris-staking-hub-tokenfactory = { path = "../../contracts/hub" }
-eris = { path = "../eris"}
-eris-kujira = { path = "../eris-kujira"}
 eris-chain-shared = { path = "../eris-chain-shared"}
-eris-chain-adapter = { path = "../eris-chain-adapter"}
+osmosis-std-derive = "0.13.2"
+cw20 = { version = "0.13.2" }
+prost = {version = "0.11.0", default-features = false, features = ["prost-derive"]}
+prost-types = {version = "0.11.1", default-features = false}
+cw-asset = "3.0.0"
+# terraswap = { git = "https://github.com/White-Whale-Defi-Platform/white-whale-core.git", default-features = false, rev = "0950abebcec5c67a0ff2d83ce730abdef8f84369" }
 
-[dev-dependencies]
-serde = { version = "1.0.103", default-features = false, features = ["derive"] }
-cosmwasm-schema = "1.1.3"
+# [dev-dependencies]
+# serde_json = "1.0.93"
+
