--- a/packages/eris-kujira-test/Cargo.toml
+++ b/packages/eris-kujira-test/Cargo.toml
@@ -16,7 +16,7 @@ backtraces = ["cosmwasm-std/backtraces"]
 X-whitewhale-X = []
 X-kujira-X = []
 X-injective-X = []
-default = ["X-kujira-X"]
+default = ["X-injective-X"]
 
 [dependencies]
 cosmwasm-std =  { version = "1.1.3", features = ["stargate"] }
@@ -24,7 +24,7 @@ cosmwasm-schema = "1.1.3"
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 kujira = "0.7.13"
-eris-staking-hub-tokenfactory = { path = "../../contracts/hub", package = "eris-staking-hub-tokenfactory-kujira" }
+eris-staking-hub-tokenfactory = { path = "../../contracts/hub", package = "eris-staking-hub-tokenfactory-injective" }
 eris = { path = "../eris"}
 eris-kujira = { path = "../eris-kujira"}
 eris-chain-shared = { path = "../eris-chain-shared"}
