--- a/packages/eris-osmosis/Cargo.toml
+++ b/packages/eris-osmosis/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "eris-chain-adapter"
-version = "1.2.2"
+name = "eris-osmosis"
+version = "1.0.0"
 authors = ["devs <devs@erisprotocol.com>"]
 edition = "2018"
 description = "Liquid staking protocol for the cosmos"
@@ -13,16 +13,6 @@ cosmwasm-std =  { version = "1.1.3", features = ["stargate"] }
 cosmwasm-schema = "1.1.3"
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
-eris-chain-shared = { path = "../eris-chain-shared" }
-eris-kujira = { path = "../eris-kujira" }
-eris-whitewhale = { path = "../eris-whitewhale" }
-eris-injective = { path = "../eris-injective" }
-eris-osmosis = { path = "../eris-osmosis" }
+osmosis-std = "0.15.3"
+eris-chain-shared = { path = "../eris-chain-shared"}
 
-[features]
-X-whitewhale-X = []
-X-kujira-X = []
-X-injective-X = []
-X-osmosis-X = []
-
-default = ["X-osmosis-X"]
