--- a/packages/eris/Cargo.toml
+++ b/packages/eris/Cargo.toml
@@ -15,3 +15,4 @@ cw20 = "0.13.2"
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 eris-chain-adapter = { path = "../eris-chain-adapter" }
+astroport = { git = "https://github.com/astroport-fi/astroport-core.git", default-features = false, rev = "bc68bb65cc2f7d5916c1f0ea41de3b19b5b63b62" }
