--- a/packages/eris-sei/Cargo.toml
+++ b/packages/eris-sei/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "eris-neutron"
+name = "eris-sei"
 version = "1.0.0"
 authors = ["devs <devs@erisprotocol.com>"]
 edition = "2018"
@@ -13,5 +13,5 @@ cosmwasm-std = { version = "1.1.3", features = ["stargate"] }
 cosmwasm-schema = "1.1.3"
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
-osmosis-std = "0.15.3"
+sei-cosmwasm = { version = "0.4.10" }
 eris-chain-shared = { path = "../eris-chain-shared" }
