--- a/packages/eris-kujira-test/Cargo.toml
+++ b/packages/eris-kujira-test/Cargo.toml
@@ -18,7 +18,7 @@ X-kujira-X = []
 X-injective-X = []
 X-osmosis-X = []
 X-sei-X = []
-default = ["X-sei-X"]
+default = ["X-osmosis-X"]
 
 [dependencies]
 cosmwasm-std = { version = "1.1.3", features = ["stargate"] }
@@ -26,7 +26,7 @@ cosmwasm-schema = "1.1.3"
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 kujira = "0.7.13"
-eris-staking-hub-tokenfactory = { path = "../../contracts/hub", package = "eris-staking-hub-tokenfactory-sei" }
+eris-staking-hub-tokenfactory = { path = "../../contracts/hub", package = "eris-staking-hub-tokenfactory-osmosis" }
 eris = { path = "../eris" }
 eris-kujira = { path = "../eris-kujira" }
 eris-chain-shared = { path = "../eris-chain-shared" }
