--- a/contracts/alliance-lst/.cargo/config
+++ b/contracts/alliance-lst/.cargo/config
@@ -3,4 +3,4 @@ wasm = "build --release --target wasm32-unknown-unknown"
 wasm-debug = "build --target wasm32-unknown-unknown"
 unit-test = "test --lib"
 integration-test = "test --test integration"
-schema = "run --example hub_schema"
+schema = "run --example alliance_lst_schema"
