alliance-lst: subtract 1 uunit from delegations to compensate rounding issue from alliance module

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [workspace]
 members = [
     # "contracts/hub",
-    # "contracts/alliance-lst",
+    "contracts/alliance-lst",
     # "contracts/token",
-    "contracts/amp-governance/*",
+    # "contracts/amp-governance/*",
     # "contracts/amp-compounder/*",
     "packages/*",
     "contracts/arb-vault",
