--- a/contracts/alliance-lst/Cargo.toml
+++ b/contracts/alliance-lst/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "eris-alliance-lst-terra"
+name = "eris-alliance-lst-whitewhale"
 version = "1.7.2"
 authors = ["devs <devs@erisprotocol.com>"]
 edition = "2018"
