--- a/contracts/arb-vault/Cargo.toml
+++ b/contracts/arb-vault/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "eris-arb-vault-whitewhale"
+name = "eris-arb-vault-osmosis"
 version = "1.0.4"
 authors = ["devs <devs@erisprotocol.com>"]
 edition = "2018"
