--- a/packages/eris/Cargo.toml
+++ b/packages/eris/Cargo.toml
@@ -13,6 +13,7 @@ cosmwasm-std = { version = "1.1.3", features = ["stargate"] }
 cosmwasm-schema = "1.1.3"
 cw20 = "0.13.2"
 cw20-base = { version = "0.13.2", features = ["library"] }
+cw-asset = { workspace = true }
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 eris-chain-adapter = { path = "../eris-chain-adapter" }
