--- a/contracts/alliance-lst/Cargo.toml
+++ b/contracts/alliance-lst/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "eris-alliance-lst-osmosis"
-version = "1.7.2"
+name = "eris-alliance-lst-terra"
+version = "1.7.3"
 authors = ["devs <devs@erisprotocol.com>"]
 edition = "2018"
 license = "GPL-3.0-or-later"
