implement nibiru, cleanup warnings

--- a/contracts/amp-compounder/generator_proxy/Cargo.toml
+++ b/contracts/amp-compounder/generator_proxy/Cargo.toml
@@ -20,6 +20,7 @@ crate-type = ["cdylib", "rlib"]
 # for quicker tests, cargo test --lib
 # for more explicit tests, cargo test --features=backtraces
 backtraces = ["cosmwasm-std/backtraces"]
+library = []
 
 [dependencies]
 astroport = { git = "https://github.com/astroport-fi/astroport-core.git", default-features = false, rev = "3b44a4044b823a145730f66ffaf7ae4205b2cd35" }
