--- a/contracts/amp-compounder/astroport_farm/Cargo.toml
+++ b/contracts/amp-compounder/astroport_farm/Cargo.toml
@@ -20,6 +20,7 @@ crate-type = ["cdylib", "rlib"]
 # for quicker tests, cargo test --lib
 # for more explicit tests, cargo test --features=backtraces
 backtraces = ["cosmwasm-std/backtraces"]
+library = []
 
 [dependencies]
 cw20 = "0.13.2"
