--- a/contracts/amp-compounder/fees_collector/Cargo.toml
+++ b/contracts/amp-compounder/fees_collector/Cargo.toml
@@ -20,6 +20,7 @@ crate-type = ["cdylib", "rlib"]
 [features]
 # for more explicit tests, cargo test --features=backtraces
 backtraces = ["cosmwasm-std/backtraces"]
+library = []
 
 [dependencies]
 cosmwasm-std = { version = "1.0" }
