--- a/contracts/arb-vault/Cargo.toml
+++ b/contracts/arb-vault/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "eris-arb-vault-whitewhale"
+name = "eris-arb-vault-nibiru"
 version = "1.0.4"
 authors = ["devs <devs@erisprotocol.com>"]
 edition = "2018"
@@ -11,6 +11,7 @@ crate-type = ["cdylib", "rlib"]
 
 [features]
 backtraces = ["cosmwasm-std/backtraces"]
+library = []
 
 [dependencies]
 cosmwasm-std = { version = "1.0.0", features = ["staking"] }
