--- a/contracts/hub/Cargo.toml
+++ b/contracts/hub/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "eris-staking-hub-tokenfactory-whitewhale"
+name = "eris-staking-hub-tokenfactory-nibiru"
 version = "1.7.1"
 authors = ["devs <devs@erisprotocol.com>"]
 edition = "2018"
@@ -11,6 +11,7 @@ crate-type = ["cdylib", "rlib"]
 
 [features]
 backtraces = ["cosmwasm-std/backtraces"]
+library = []
 
 [dependencies]
 cosmwasm-std = { version = "1.1.3", features = ["staking"] }
