--- a/packages/eris-kujira-test/Cargo.toml
+++ b/packages/eris-kujira-test/Cargo.toml
@@ -19,7 +19,8 @@ X-injective-X = []
 X-osmosis-X = []
 X-sei-X = []
 X-terra-X = []
-default = ["X-whitewhale-X"]
+X-nibiru-X = []
+default = ["X-nibiru-X"]
 
 [dependencies]
 cosmwasm-std = { version = "1.1.3", features = ["stargate"] }
@@ -27,7 +28,7 @@ cosmwasm-schema = "1.1.3"
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 kujira = "0.7.13"
-eris-staking-hub-tokenfactory = { path = "../../contracts/hub", package = "eris-staking-hub-tokenfactory-whitewhale" }
+eris-staking-hub-tokenfactory = { path = "../../contracts/hub", package = "eris-staking-hub-tokenfactory-nibiru" }
 eris = { path = "../eris" }
 eris-kujira = { path = "../eris-kujira" }
 eris-chain-shared = { path = "../eris-chain-shared" }
