--- a/packages/eris-nibiru/Cargo.toml
+++ b/packages/eris-nibiru/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "eris-chain-adapter"
+name = "eris-nibiru"
 version = "1.2.2"
 authors = ["devs <devs@erisprotocol.com>"]
 edition = "2018"
@@ -14,21 +14,10 @@ cosmwasm-schema = "1.1.3"
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 eris-chain-shared = { path = "../eris-chain-shared" }
-eris-kujira = { path = "../eris-kujira" }
-eris-whitewhale = { path = "../eris-whitewhale" }
-eris-injective = { path = "../eris-injective" }
-eris-osmosis = { path = "../eris-osmosis" }
-eris-sei = { path = "../eris-sei" }
-eris-terra = { path = "../eris-terra" }
-eris-nibiru = { path = "../eris-nibiru" }
-
-[features]
-X-whitewhale-X = []
-X-kujira-X = []
-X-injective-X = []
-X-osmosis-X = []
-X-sei-X = []
-X-terra-X = []
-X-nibiru-X = []
-
-default = ["X-nibiru-X"]
+osmosis-std-derive = "0.13.2"
+cw20 = { version = "0.13.2" }
+prost = { version = "0.11.0", default-features = false, features = [
+    "prost-derive",
+] }
+prost-types = { version = "0.11.1", default-features = false }
+cw-asset = "3.0.0"
