kujira: fix build

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [workspace]
 members = [
-    "contracts/hub",
-    "contracts/alliance-lst",
-    "contracts/token",
-    "contracts/amp-governance/*",
-    "contracts/amp-compounder/*",
-    "contracts/arb-vault",
+    # "contracts/hub",
+    # "contracts/alliance-lst",
+    # "contracts/token",
+    "contracts/amp-governance/voting_escrow",
+    # "contracts/amp-compounder/*",
+    # "contracts/arb-vault",
     "packages/*",
     # "contracts/amp-governance/restake_gauges",
 ]
